<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">51daifan</string>
    <string name="setting">Settings</string>
    <string name="help_and_info">Help</string>
    <string name="more">More</string>
    <string name="compose">Compose</string>
    <string name="refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="postnew_heading">发布带饭</string>
    <string name="postnew_progress_text">发布中...</string>
    <string name="prompt_postnew_date">带饭日期</string>
    <string name="prompt_postnew_count">份数</string>
    <string name="prompt_postnew_name">菜名</string>
    <string name="prompt_postnew_desc">详细描述</string>
    <string name="action_postnew_post">发布</string>
    <string name="error_postnew_desc_minlen">请简单描述菜品...</string>
    <string name="error_postnew_post_failed">发布失败，请检查网络连接状态</string>
    <string name="bookBtn_book">订 饭</string>
    <string name="bookBtn_cancel">取 消</string>
    <string name="action_logout">退出</string>
    <string name="prompt_post_comment">写下你的评论...</string>
    <string name="btnComment">评论</string>
    <string name="login_required">请您先登陆</string>
    <string name="out_of_order">亲没有啦</string>
    <string name="booked_names_prefix">谁订了：</string>
    <string name="post_comment_btn">发表</string>
    <string name="total">总共</string>
    <string name="left">还剩</string>
    <string name="not_active_any_more">亲，已过期</string>
    <string name="whobookedlabel">谁订了:</string>
    <string name="bookBtn_book_status">是否可订</string>

    <string name="loading">加载中</string>
    <string name="network_retry">重试</string>
    <string name="image_empty">""</string>

    <string name="WidgetProvider_timestamp_today">今天</string>
    <string name="WidgetProvider_timestamp_yesterday">昨天</string>
    <string name="WidgetProvider_timestamp_hour_ago">%s小时前</string>
    <string name="WidgetProvider_timestamp_hours_ago">%s小时前</string>
    <string name="WidgetProvider_timestamp_minutes_ago">%s分钟前</string>
    <string name="WidgetProvider_timestamp_just_now">刚刚</string>
    <string name="WidgetProvider_timestamp_month">%d月</string>
    <string name="WidgetProvider_timestamp_day">%d号</string>

    <string name="new_blog_toast">更新了%d条动态</string>
    <string name="no_new_blog_toast">没有新动态</string>

    <string name="feed_type_create">分享了爱心便当</string>
    <string name="feed_type_book">吃了爱心便当</string>
    <string name="book_book_op">正在订饭...</string>
    <string name="book_undo_op">正在取消订饭</string>
    <string name="comment_block_title">提示</string>
    <string name="comment_block_error">Sorry，目前只开放吃过的人评论。</string>
    <string name="image_viewer">图片浏览</string>
    <string name="personal_center_building">个人中心建设中...</string>

    <string name="take_photo">"拍照"</string>
    <string name="pick_photo">"从图库中选择照片"</string>

</resources>
