<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".activity.PostNewActivity">

    <!-- Posting progress -->
    <LinearLayout
            android:id="@+id/postnew_status"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/postnew_status_message"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/postnew_progress_text"/>
    </LinearLayout>

    <!-- the post new form -->
    <ScrollView
            android:id="@+id/postnew_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:longClickable="false">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <!--  View Title Label -->
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/postnew_heading"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                <EditText
                        android:id="@+id/postnew_eatdate"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:hint="@string/prompt_postnew_date"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">
                <EditText
                        android:id="@+id/postnew_count"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_postnew_count"
                        android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">
                <EditText
                        android:id="@+id/postnew_name"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_postnew_name"
                        android:inputType="textAutoComplete"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">
                <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    <LinearLayout
                            android:id="@+id/mygallery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <ImageView
                                android:id="@+id/postnew_add_pic"
                                android:src="@drawable/pic_plus"
                                android:background="@null"
                                android:visibility="visible"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="centerInside"
                                android:maxWidth="@dimen/preview_pic_size"
                                android:maxHeight="@dimen/preview_pic_size"
                                android:minWidth="48.0dip"
                                android:minHeight="33.0dip"/>
                    </LinearLayout>
                </HorizontalScrollView>

                <EditText
                        android:id="@+id/postnew_desc"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_postnew_desc"
                        android:inputType="textWebEditText"
                        android:imeActionLabel="@string/action_postnew_post"
                        android:imeActionId="@+id/ime_action_postnew"
                        android:imeOptions="actionDone"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">
                    <Button
                            android:id="@+id/postnew_post_btn"
                            android:layout_width="130dp"
                            android:layout_height="50dp"
                            android:text="@string/action_postnew_post"
                            android:paddingLeft="32dp"
                            android:paddingRight="32dp"
                            android:background="#ff669900"
                            android:clickable="true"
                            android:textColor="#ffffff"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</merge>